# maskedcat

./: CMakeLists.txt  readme.md
docs/: index.html  maskedcat.html  maskedcat.js
qml/: main.qml
shaders/: gaussianblur.frag
src/: main.cpp
